notification editing page interface done

--- a/FedPet/wwwroot/css/app.css
+++ b/FedPet/wwwroot/css/app.css
@@ -249,6 +249,10 @@ label{
     color: #adb5bd;
 }
 
+.edit-notification{
+    font-size: 1.25rem;
+}
+
 /*h1{*/
 /*    font-size: 2.25rem;*/
 /*}*/
