--- a/FedPet/Components/Pages/PetView.razor
+++ b/FedPet/Components/Pages/PetView.razor
@@ -41,8 +41,19 @@
                 <img src="icons/more_white.svg" class="icon d-block" alt="edit"/></div></div>
         @* ICON NOTIFICATIONS *@
         <div class="col-3 justify-content-center align-content-center">
-            <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center">
-                <img src="icons/bell.svg" class="icon d-block" alt="notifications"/></div></div>
+            @if (_self is { NotificationEnabled: true })
+            {
+                <a href="@($"/EditNotification/{_self?.Id}")">
+                    <div class="button-accept shadow-sm mx-auto justify-content-center align-content-center">
+                        <img src="icons/bell.svg" class="icon d-block" alt="notifications"/></div></a>
+            }
+            else
+            {
+                <a href="@($"/EditNotification/{_self?.Id}")">
+                    <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center">
+                        <img src="icons/bell.svg" class="icon d-block" alt="notifications"/></div></a>
+            }
+        </div>
     </div>
 
     @* DISPLAY PET EDITING COMPONENT PANEL CONDITIONALLY *@
@@ -56,8 +67,10 @@
     @* DISPLAY NOTIFICATION SETTINGS COMPONENT PANEL CONDITIONALLY *@
     @if (_editNotification)
     {
-        <div class="row justify-content-center mt-4">
-
+        <div class="row justify-content-center align-content-center" style="min-height: 30vh;">
+            <div class="col-9 justify-content-center align-content-center edit-notification">
+                <EditNotification/>
+            </div>
         </div>
     }
     
