--- a/FedPet/Components/Pages/EditNotification.razor
+++ b/FedPet/Components/Pages/EditNotification.razor
@@ -5,14 +5,17 @@
 
 <div class="container-fluid justify-content-center align-content-start vw-100 vh-100">
 
+    @* SPACING *@
     <div class="row" style="min-height: 5vh;"></div>
 
+    @* PET NAME *@
     <div class="row justify-content-center align-content-center text-center" style="min-height: 10vh;">
         <h1 class="d-inline-block fw-bold text-name-break" style="width: 80vw;">
             @_self?.Name
         </h1>
     </div>
 
+    @* NOTIFICATION LABEL *@
     <div class="row justify-content-center align-content-center text-center" style="min-height: 5vh;">
         <h2 class="d-inline-block fw-bold">
             Notifications
@@ -20,7 +23,7 @@
     </div>
 
     
-
+    @* NOTIFICATION EDIT CONTROLS *@
     <div class="row justify-content-center align-content-center mt-4">
         <div class="col-9 justify-content-center align-content-center edit-notification">
 
@@ -34,57 +37,131 @@
                 </div>
             </div>
 
+            @* HORIZONTAL LINE *@
             <div class="row">
                 <div class="col">
-                    <hr/></div>
-            </div>
+                    <hr/></div></div>
 
             @* Notify in row *@
             <div class="row justify-content-evenly align-content-center">
                 <div class="col-4 justify-content-start align-content-center text-start"><span class="fw-normal align-self-center">Notify in</span></div>
 
                 <div class="col-8 justify-content-center">
-                    <div class="row justify-content-evenly mb-2">
-                        <div class="col-6 justify-content-center text-center"><span class="fw-bold" style="color: var(--fedpet-green);">2</span></div>
+                    
+                    @* DAYS CONTROLS *@
+                    <div class="row justify-content-evenly mb-3">
+                        <div class="col-6 justify-content-center align-content-center text-center">
+
+                            <div class="row justify-content-center align-content-center">
+
+                                <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
+                                    <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
+                                         @onclick='() => ChangeValue( ref _days, -1, 31)'>
+                                        <img src="icons/minus.svg" class="icon d-block" alt="subtract"/>
+                                    </div>
+                                </div>
+                                <div class="col-4 g-0 justify-content-center align-content-center text-center">
+                                    <span class="fw-bold" style="color: var(--fedpet-green);">@_days</span>
+                                </div>
+                                <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
+                                    <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
+                                         @onclick="() => ChangeValue(ref _days, 1, 31)">
+                                        <img src="icons/plus.svg" class="icon d-block" alt="add"/>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                         <div class="col-6 justify-content-end text-end"><span class="fw-normal">Days</span></div>
                     </div>
 
+                    @* HOURS CONTROLS *@
                     <div class="row justify-content-evenly">
-                        <div class="col-6 justify-content-center text-center"><span class="fw-bold" style="color: var(--fedpet-green);">0</span></div>
-                        <div class="col-6 justify-content-end text-end">Hours</div>
+                        <div class="col-6 justify-content-center align-content-center text-center">
+
+                            <div class="row justify-content-center align-content-center">
+
+                                <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
+                                    <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
+                                         @onclick='() => ChangeValue( ref _hours, -1, 23)'>
+                                        <img src="icons/minus.svg" class="icon d-block" alt="subtract"/>
+                                    </div>
+                                </div>
+                                <div class="col-4 g-0 justify-content-center align-content-center text-center">
+                                    <span class="fw-bold" style="color: var(--fedpet-green);">@_hours</span>
+                                </div>
+                                <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
+                                    <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
+                                         @onclick='() => ChangeValue( ref _hours, 1, 23)'>
+                                        <img src="icons/plus.svg" class="icon d-block" alt="add"/>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-6 justify-content-end text-end"><span class="fw-normal">Hours</span></div>
                     </div>
 
-                    <div class="row justify-content-evenly mt-2">
-                        <div class="col-6 justify-content-center text-center"><span class="fw-bold" style="color: var(--fedpet-green);">0</span></div>
-                        <div class="col-6 justify-content-end text-end">Minutes</div>
+                    @* MINUTES CONTROLS *@
+                    <div class="row justify-content-evenly mt-3">
+                        <div class="col-6 justify-content-center align-content-center text-center">
+
+                            <div class="row justify-content-center align-content-center">
+
+                                <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
+                                    <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
+                                         @onclick='() => ChangeValue( ref _minutes, -15, 45)'>
+                                        <img src="icons/minus.svg" class="icon d-block" alt="subtract"/>
+                                    </div>
+                                </div>
+                                <div class="col-4 g-0 justify-content-center align-content-center text-center">
+                                    <span class="fw-bold" style="color: var(--fedpet-green);">@_minutes</span>
+                                </div>
+                                <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
+                                    <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
+                                         @onclick='() => ChangeValue( ref _minutes, 15, 45)'>
+                                        <img src="icons/plus.svg" class="icon d-block" alt="add"/>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-6 justify-content-end text-end"><span class="fw-normal">Minutes</span></div>
                     </div>
+                    
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col">
-                    <hr/>
+            @if (_hours == 0 && _minutes == 0)
+            {
+                @* HORIZONTAL LINE *@
+                <div class="row">
+                    <div class="col">
+                        <hr/></div></div>
+
+                @* Notify at time row *@
+                <div class="row justify-content-evenly align-content-center">
+                    <div class="col-6 justify-content-start align-content-center text-start"><span class="fw-normal">Notify at</span></div>
+
+                    <div class="col-6 justify-content-end align-content-center text-end"><span class="fw-bold" style="color: var(--fedpet-green);">8:30 PM</span></div>
                 </div>
-            </div>
-
-            @* Notify at time row *@
-            <div class="row justify-content-evenly align-content-center">
-                <div class="col-6 justify-content-start align-content-center text-start"><span class="fw-normal">Notify at</span></div>
-
-                <div class="col-6 justify-content-end align-content-center text-end"><span class="fw-bold" style="color: var(--fedpet-green);">8:30 PM</span></div>
-            </div>
+            }
         
         </div>
     </div>
 
+    @* BUTTONS - ACCEPT AND DECLINE CONTROLS *@
     <div class="row justify-content-center mt-4">
+        
         <div class="col-3 justify-content-center">
             <div class="button-accept shadow-sm mx-auto justify-content-center align-content-center" @onclick="OnAcceptClick">
                 <img src="icons/accept.svg" class="icon d-block" alt="accept"/></div></div>
 
         <div class="col-3 justify-content-center">
-            <a href="@($"/PetView/{_self?.Id}")"><div class="button-decline shadow-sm mx-auto justify-content-center align-content-center">
-                <img src="icons/decline.svg" class="icon d-block" alt="decline"/></div></a></div>
+            <a href="@($"/PetView/{_self?.Id}")">
+                <div class="button-decline shadow-sm mx-auto justify-content-center align-content-center">
+                    <img src="icons/decline.svg" class="icon d-block" alt="decline"/></div></a></div>
+        
     </div>
 
 </div>
@@ -94,15 +171,23 @@
     
     private Pet? _self;
 
-    public bool _enableCheckbox;
+    private bool _enableCheckbox;
+    private int _days;
+    private int _hours;
+    private int _minutes;
     
     // PAGE INITIALIZATION
     protected override async Task OnInitializedAsync()
     {
         _self = await Db.GetPetAsync(Id);
         if (_self is null) Navigation.NavigateTo("/");
-
-        _enableCheckbox = _self.NotificationEnabled;
+        else
+        {
+            _enableCheckbox = _self.NotificationEnabled;
+            _days = _self.NotificationIntervalDays;
+            _hours = _self.NotificationIntervalHours;
+            _minutes = _self.NotificationIntervalMinutes;
+        }
     }
 
     private async Task OnEnableCheckbox()
@@ -114,13 +199,21 @@
 
     private async Task OnAcceptClick()
     {
-        _self.NotificationEnabled = _enableCheckbox;
-        
         if (_self is not null)
         {
+            _self.NotificationEnabled = _enableCheckbox;
             await Db.UpdatePetAsync(_self);
         }
         
         Navigation.NavigateTo($"/PetView/{_self?.Id}");
+    }
+
+    private void ChangeValue(ref int value, int add, int max)
+    {
+        if (value + add >= 0 && value + add <= max)
+        {
+            value += add;
+            StateHasChanged();
+        }
     }
 }
