--- a/FedPet/Components/Pages/EditNotification.razor
+++ b/FedPet/Components/Pages/EditNotification.razor
@@ -56,7 +56,7 @@
 
                                 <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
                                     <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
-                                         @onclick='() => ChangeValue( ref _days, -1, 31)'>
+                                         @onclick="() => { ChangeValue(ref _days, -1, 0, 31); _minutes = 0; _hours = 0; }">
                                         <img src="icons/minus.svg" class="icon d-block" alt="subtract"/>
                                     </div>
                                 </div>
@@ -65,7 +65,7 @@
                                 </div>
                                 <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
                                     <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
-                                         @onclick="() => ChangeValue(ref _days, 1, 31)">
+                                         @onclick="() => { ChangeValue(ref _days, 1, 0, 31); _minutes = 0; _hours = 0; }">
                                         <img src="icons/plus.svg" class="icon d-block" alt="add"/>
                                     </div>
                                 </div>
@@ -83,7 +83,7 @@
 
                                 <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
                                     <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
-                                         @onclick='() => ChangeValue( ref _hours, -1, 23)'>
+                                         @onclick="() => { ChangeValue(ref _hours, -1, 0, 23); _days = 0; }">
                                         <img src="icons/minus.svg" class="icon d-block" alt="subtract"/>
                                     </div>
                                 </div>
@@ -92,7 +92,7 @@
                                 </div>
                                 <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
                                     <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
-                                         @onclick='() => ChangeValue( ref _hours, 1, 23)'>
+                                         @onclick="() => { ChangeValue(ref _hours, 1, 0, 23); _days = 0; }">
                                         <img src="icons/plus.svg" class="icon d-block" alt="add"/>
                                     </div>
                                 </div>
@@ -110,7 +110,7 @@
 
                                 <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
                                     <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
-                                         @onclick='() => ChangeValue( ref _minutes, -15, 45)'>
+                                         @onclick="() => { ChangeValue(ref _minutes, -15, 0, 45); _days = 0; }">
                                         <img src="icons/minus.svg" class="icon d-block" alt="subtract"/>
                                     </div>
                                 </div>
@@ -119,7 +119,7 @@
                                 </div>
                                 <div class="col-4 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
                                     <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
-                                         @onclick='() => ChangeValue( ref _minutes, 15, 45)'>
+                                         @onclick="() => { ChangeValue(ref _minutes, 1, 0, 45); _days = 0; }"> @* CHANGE BACK TO 15 MINUTES PER CLICK *@
                                         <img src="icons/plus.svg" class="icon d-block" alt="add"/>
                                     </div>
                                 </div>
@@ -141,9 +141,33 @@
 
                 @* Notify at time row *@
                 <div class="row justify-content-evenly align-content-center">
-                    <div class="col-6 justify-content-start align-content-center text-start"><span class="fw-normal">Notify at</span></div>
+                    <div class="col-4 justify-content-start align-content-center text-start"><span class="fw-normal">Notify at</span></div>
 
-                    <div class="col-6 justify-content-end align-content-center text-end"><span class="fw-bold" style="color: var(--fedpet-green);">8:30 PM</span></div>
+                    <div class="col-8 justify-content-center align-content-center">
+                        <div class="row justify-content-end align-content-center">
+
+                            <div class="col-2 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
+                                <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
+                                     @onclick="() => ChangeValue( ref _notifyAtMinutes, -15, 60, 720)">
+                                    <img src="icons/minus.svg" class="icon d-block" alt="subtract"/>
+                                </div>
+                            </div>
+                            <div class="col-4 g-0 justify-content-center align-content-center text-center">
+                                <span class="fw-bold" style="color: var(--fedpet-green);">@GetNotifyAtString()</span>
+                            </div>
+                            <div class="col-2 g-2 justify-content-center align-content-center mx-auto" style="margin: auto;">
+                                <div class="button-neutral shadow-sm mx-auto justify-content-center align-content-center" style="width:100%;"
+                                     @onclick="() => ChangeValue( ref _notifyAtMinutes, 15, 60, 720)">
+                                    <img src="icons/plus.svg" class="icon d-block" alt="add"/>
+                                </div>
+                            </div>
+                            <div class="col-4 g-0 justify-content-center align-content-center text-center" @onclick="() => _notifyAtAm = !_notifyAtAm">
+                                @if (_notifyAtAm) { <span class="fw-bold" style="color: var(--fedpet-green); text-decoration: underline;">AM</span> }
+                                else { <span class="fw-bold" style="color: var(--fedpet-green); text-decoration: underline;">PM</span> }
+                            </div>
+                            
+                        </div>
+                    </div>
                 </div>
             }
         
@@ -175,6 +199,8 @@
     private int _days;
     private int _hours;
     private int _minutes;
+    private int _notifyAtMinutes;
+    private bool _notifyAtAm;
     
     // PAGE INITIALIZATION
     protected override async Task OnInitializedAsync()
@@ -187,6 +213,8 @@
             _days = _self.NotificationIntervalDays;
             _hours = _self.NotificationIntervalHours;
             _minutes = _self.NotificationIntervalMinutes;
+            _notifyAtMinutes = _self.NotifyAtMinutes;
+            _notifyAtAm = _self.NotifyAtAm;
         }
     }
 
@@ -201,19 +229,48 @@
     {
         if (_self is not null)
         {
-            _self.NotificationEnabled = _enableCheckbox;
+            if (_enableCheckbox && (_days != 0 || _hours != 0 || _minutes != 0))
+            {
+                _self.NotificationEnabled = _enableCheckbox;
+                _self.NotificationIntervalDays = _days;
+                _self.NotificationIntervalHours = _hours;
+                _self.NotificationIntervalMinutes = _minutes;
+                _self.NotifyAtMinutes = _notifyAtMinutes;
+                _self.NotifyAtAm = _notifyAtAm;
+
+                var records = await Db.GetFeedingRecordsAsync(_self.Id);
+                if (records.Count > 0)
+                {
+                    await NotificationHandler.CreateNotification(Db, _self, records.Last().FeedingTime);
+                }
+            }
+            else
+            {
+                _self.NotificationEnabled = false;
+                await NotificationHandler.CancelNotification(Db, _self);
+            }
             await Db.UpdatePetAsync(_self);
         }
         
         Navigation.NavigateTo($"/PetView/{_self?.Id}");
     }
 
-    private void ChangeValue(ref int value, int add, int max)
+    private void ChangeValue(ref int value, int add, int min, int max)
     {
-        if (value + add >= 0 && value + add <= max)
-        {
+        if (value + add >= min && value + add <= max)
             value += add;
-            StateHasChanged();
-        }
+        else if (value + add < min)
+            value = max;
+        else if (value + add > max)
+            value = min;
+        
+        StateHasChanged();
+    }
+
+    private string GetNotifyAtString()
+    {
+        int hours = _notifyAtMinutes / 60;
+        int minutes = _notifyAtMinutes % 60;
+        return minutes == 0 ? $"{hours}:00" : $"{hours}:{minutes}";
     }
 }
