New notification system, got rid of plugin.localnotification, TODO refactor new notifications, comment and get rid of warnings.

--- a/FedPet/Components/Layout/MainLayout.razor
+++ b/FedPet/Components/Layout/MainLayout.razor
@@ -6,6 +6,7 @@
 
 @code{
 
+    // If app was opened by clicking a notification, navigate to specific pets page.
     protected override async Task OnInitializedAsync()
     {
         if (NotificationHandler.NavigateAfterNotification && NotificationHandler.NavigateAfterNotificationRoute != String.Empty)
