--- a/FedPet/Components/Layout/MainLayout.razor
+++ b/FedPet/Components/Layout/MainLayout.razor
@@ -9,9 +9,10 @@
     // If app was opened by clicking a notification, navigate to specific pets page.
     protected override async Task OnInitializedAsync()
     {
-        if (NotificationHandler.NavigateAfterNotification && NotificationHandler.NavigateAfterNotificationRoute != String.Empty)
+        if (NotificationHandler.NavigateAfterNotification && NotificationHandler.NavigateAfterNotificationRoute != string.Empty)
         {
             Navigation.NavigateTo(NotificationHandler.NavigateAfterNotificationRoute);
+            await Task.CompletedTask;
         }
     }
     
